# fake-super

./: .coveragerc  .gitignore  .gitlab-ci.yml  .prettierrc  CHANGELOG.md  LICENSE.md  MANIFEST.in  Makefile  README.md  fake-super.py  pyproject.toml  setup.cfg  setup.py  tox.ini
fake_super/: __init__.py  version.py
fake_super/tests/: 10-unstat-tests.py  11-statfmt-tests.py  20-chown-tests.py  30-restore-tests.py  40-main-tests.py
src/fake_super/: __init__.py
tests/: test_10_unstat.py  test_11_statfmt.py  test_20_chown.py  test_30_restore.py  test_40_main.py
