[metadata]
name = fake-super
author = Marcel Waldvogel
author_email = marcel.waldvogel@trifence.ch
description = Inspect/apply information created by `rsync --fake-super`
long_description = file: README.md
long_description_content_type = text/markdown
url = https://netfuture.ch/tools/fake-super/
project_urls =
  GitLab = https://gitlab.com/MarcelWaldvogel/fake-super/
  GitHub = https://github.com/MarcelWaldvogel/fake-super/
license = MIT
license_files = LICENSE.md
classifiers =
  Development Status :: 3 - Alpha
  Environment :: Console
  Intended Audience :: Information Technology
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
  Natural Language :: English
  Topic :: Utilities
  Topic :: System :: Archiving :: Backup
  Topic :: System :: Archiving :: Mirroring

[options]
zip_safe = True
package_dir =
  = src
packages = find:
install_requires =
  setuptools
  importlib_metadata
python_requires = >=3.6

[options.entry_points]
console_scripts =
  fake-super=fake_super:main

[options.packages.find]
where = src

[flake8]
filename = *.py, src/fake_super/*.py
exclude = venv/, .tox/, .eggs/
